objects/ELV_ServerDeploymentUsageAllocation__c/ELV_ServerDeploymentUsageAllocation__c.object-meta.xml
<CustomObject>
    <label>Server Deployment Usage Allocation</label>
    <nameField>
        <displayFormat>UA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Server Deployment Usage Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>