objects/ELV_ServerDeploymentUsageAllocation__c/fields/ELV_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>