objects/ELV_ServerDeploymentUsageAllocation__c/fields/ELV_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>ELV_Entitlement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Ruby__Entitlement__c</referenceTo>
    <relationshipLabel>Server Deployment Usage Allocations</relationshipLabel>
    <relationshipName>ELV_ServerDeploymentUsageAllocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>