objects/ELV_ServerDeploymentUsageAllocation__c/fields/ELV_Server_Deployment__c.field-meta.xml
<CustomField>
    <fullName>ELV_Server_Deployment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Server Deployment</label>
    <referenceTo>Server_Deployment__c</referenceTo>
    <relationshipLabel>Server Deployment Usage Allocations</relationshipLabel>
    <relationshipName>ELV_ServerDeploymentUsageAllocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>