objects/ELV_ServerDeploymentUsageAllocation__c/fields/ELV_Usage_Allocation__c.field-meta.xml
<CustomField>
    <fullName>ELV_Usage_Allocation__c</fullName>
    <label>Usage Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>