objects/ELV_ServerDeploymentUsageAllocation__c/fields/ELV_Usage_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ELV_Usage_Identifier__c</fullName>
    <label>Usage Identifier</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>