objects/ELV_ServerDeploymentUsageAllocation__c/fields/ELV_Version__c.field-meta.xml
<CustomField>
    <fullName>ELV_Version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>